bk_ida/gccida/g2/propagate_freq
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_freq/src/predict.c:1206:12: error: expected expression
*( _OWORD *)aux = 0x3FF0000000000000uLL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_freq/src/predict.c:1206:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)aux = 0x3FF0000000000000uLL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_freq/src/obj/predict.o] Error 1
